# MemoryProfiler

./: CMakeLists.txt  ProyectoCompleto.txt  ProyectoCompleto2.txt
Backend/: CMakeLists.txt  main.cpp
Backend/memoryprofiler/: CMakeLists.txt
Backend/memoryprofiler/include/: memprof.hpp
Backend/memoryprofiler/src/: new_delete_overrides.cpp  registry.cpp  registry.hpp
Legacy/: LegacyBridge.cpp  new_delete_overrides.cpp  registry.cpp  registry.hpp
archive/: LegacyBridge.cpp  MemoryTracker.cpp  MemoryTracker.h  MetricsWorker.h  NetUtils.cpp  NetUtils.h  Protocol.h  SocketServer.cpp  SocketServer.h  broker_client_example.cpp
archive/gui/: style.css
archive/tests/: test_metrics.cpp  test_socket.cpp
demos/: CMakeLists.txt
demos/examples/: alloc_a.cpp  alloc_b.cpp  alloc_c.cpp  demo_leaks.cpp  demo_stress.cpp
examples/: alloc_a.cpp  alloc_b.cpp  alloc_c.cpp  demo_leaks.cpp  demo_stress.cpp  metrics_stream.cpp
gui/: app.js  charts.js  index.html  style.css
include/: BrokerClient.h  LegacyBridge.h  MemoryTracker.h  MetricsAggregator.h  MetricsCalculator.h  SocketServer.h
include/memprof/core/: MetricsAggregator.h  MetricsCalculator.h
memprof/: CMakeLists.txt
memprof-gui/: CMakeLists.txt
memprof-gui/frontend/app/: MainWindow.cpp  MainWindow.h  main.cpp
memprof-gui/frontend/model/: TableModels.h
memprof-gui/frontend/net/: ServerWorker.cpp  ServerWorker.h
memprof-gui/frontend/tabs/: GeneralTab.cpp  GeneralTab.h  LeaksTab.cpp  LeaksTab.h  MapTab.h  PerFileTab.h
memprof/backend/Legacy/: memprof.hpp  new_delete_overrides.cpp
memprof/backend/core/: MetricsAggregator.cpp  Runtime.cpp  TcpClient.cpp
memprof/include/memprof/: memprof_new.h
memprof/include/memprof/core/: Runtime.h
memprof/include/memprof/proto/: MetricsSnapshot.h
src/: BrokerClient.cpp  MainWindow.cpp  MainWindow.h  MemoryTracker.cpp  MetricsAggregator.cpp  MetricsCalculator.cpp  Protocol.cpp  gui_http_server.cpp  main.cpp
src/backend/core/: MetricsAggregator.cpp  MetricsCalculator.cpp  Runtime.cpp  TcpClient.cpp
src/frontend/app/: MainWindow.cpp  MainWindow.h
src/frontend/model/: Reducers.cpp  Reducers.h  TableModels.cpp
src/frontend/net/: ServerWorker.h
src/frontend/tabs/: GeneralTab.cpp  LeaksTab.cpp  LeaksTab.h  MapTab.cpp  MapTab.h  PerFileTab.cpp
src/lib/: TcpClient.cpp  TcpClient.h  memprof_api.h  memprof_runtime.cpp
src/model/: MetricsSnapshot.h  Reducers.cpp  Reducers.h  TableModels.cpp  TableModels.h
src/net/: MetricsWorker.cpp  ServerWorker.cpp  ServerWorker.h
src/tabs/: GeneralTab.cpp  GeneralTab.h  LeaksTab.cpp  LeaksTab.h  MapTab.cpp  MapTab.h  PerFileTab.cpp  PerFileTab.h
tests/: test_socket.cpp
tools/: CMakeLists.txt  mock_broker.cpp
